infra/environments/development/configurationPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  template:
    spec:
      containers:
        - image: registry.digitalocean.com/wallfair/backend_k8s
          name: backend
