infra/environments/development/ingressPatch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  tls:
  - hosts:
    - dev-api.wallfair.io
    secretName: backend-development-cert-secret
  rules:
  - host: dev-api.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 80
